# gfc

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml  codeql-analysis.yml  pypi.yml  pypi_amd64.yml  pypi_arm64.yml  tests.yml
include/gfc/: gfc.h
python/: pygfc.pyx  pygfc_test.py  test_pygfc.py
rust/: Cargo.toml  build.rs
rust/src/: main.rs
src/: gfc.c  gfc_bench.c  gfc_test.c
